# prog-lang

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  input.prog  input.progl  main.prog  test.txt
.github/workflows/: badge.yml  build.yml
crates/prog-compiler/: Cargo.toml
crates/prog-compiler/src/: intermediate.rs  lib.rs
crates/prog-interpreter/: Cargo.toml
crates/prog-interpreter/src/: arg_parser.rs  context.rs  errors.rs  intrinsics.rs  lib.rs  shared.rs  value.rs  values.rs
crates/prog-interpreter/src/error/: arg_count_mismatch.rs  arg_type_mismatch.rs  assertion_eq_failed.rs  assertion_failed.rs  cannot_index_expr.rs  class_field_redef.rs  class_fn_reassign.rs  ctx_disallowed.rs  duplicate_obj_entry.rs  expr_not_assignable.rs  expr_not_callable.rs  expression_not_callable.rs  field_doesnt_exist.rs  invalid_class_construction.rs  invalid_extern.rs  invalid_index.rs  mod.rs  obj_entry_redef.rs  todo.rs  unimplemented.rs  var_doesnt_exist.rs  variable_doesnt_exist.rs
crates/prog-interpreter/src/errors/: argument_count_mismatch.rs  argument_type_mismatch.rs  assertion_failed.rs  cannot_index_value.rs  cannot_reassign_class_functions.rs  context_disallowed.rs  duplicate_object_entry.rs  expression_not_assignable.rs  expression_not_callable.rs  field_doesnt_exist.rs  function_panicked.rs  invalid_extern_argument.rs  mod.rs  non_exhaustive_class_construction.rs  non_existent_extern_item.rs  unsupported_binary.rs  unsupported_statement.rs  unsupported_unary.rs  value_already_exists.rs  value_doesnt_exist.rs  variable_doesnt_exist.rs
crates/prog-interpreter/src/value/: boolean.rs  class.rs  control_flow.rs  function.rs  intrinsic_func.rs  list.rs  mod.rs  number.rs  object.rs  string.rs
crates/prog-interpreter/src/values/: boolean.rs  class.rs  function.rs  identifier.rs  impls.rs  intrinsic_function.rs  list.rs  marker.rs  mod.rs  number.rs  object.rs  primitives.rs  string.rs
crates/prog-interpreter/tests/: arg_parser.rs  context.rs
crates/prog-lexer/: Cargo.toml
crates/prog-lexer/src/: lib.rs  stream.rs  token.rs
crates/prog-lexer/src/error/: malformed_number.rs  mod.rs  unexpected_char.rs  unexpected_token.rs
crates/prog-lexer/src/errors/: malformed_number.rs  mod.rs  unexpected_token.rs
crates/prog-lexer/src/stream/: mod.rs  wrapper.rs
crates/prog-macros/: Cargo.toml
crates/prog-macros/src/: ariadne_compatible_inner.rs  conversion_inner.rs  get_argument_inner.rs  get_this_inner.rs  impl_ariadne_compatible_inner.rs  lib.rs  utils.rs
crates/prog-new-parser/: Cargo.toml
crates/prog-new-parser/src/: ast.rs  lib.rs  stream.rs  token.rs
crates/prog-new-parser/src/ast/: binary_expr.rs  call.rs  expr.rs  field_acc.rs  index_acc.rs  lit.rs  mod.rs  punctuated.rs  term.rs  unary_expr.rs
crates/prog-new-parser/src/ast/stmts/: mod.rs  var_def.rs
crates/prog-old-interpreter/: Cargo.toml
crates/prog-old-interpreter/src/errors/: duplicate_object_entry.rs  field_doesnt_exist.rs
crates/prog-old-interpreter/src/values/: boolean.rs  class.rs
crates/prog-old-interpreter/tests/: arg_parser.rs  context.rs
crates/prog-old-parser/: Cargo.toml
crates/prog-old-parser/src/ast/: misc.rs
crates/prog-old-parser/src/ast/expressions/: impls.rs  mod.rs
crates/prog-old-parser/src/errors/: expected_rules.rs  mod.rs
crates/prog-parser/: Cargo.toml
crates/prog-parser/src/: ast.rs  errors_legacy.rs  grammar.pest  lib.rs  stream.rs  token.rs  utils.rs
crates/prog-parser/src/ast/: binary_expr.rs  call.rs  expr.rs  ext.rs  field_acc.rs  func.rs  ident.rs  index_acc.rs  list.rs  lit.rs  misc.rs  mod.rs  obj.rs  punctuated.rs  self_kw.rs  statements.rs  term.rs  unary_expr.rs
crates/prog-parser/src/ast/expressions/: impls.rs  mod.rs
crates/prog-parser/src/ast/stmts/: class_def.rs  control_flow.rs  do_block.rs  expr_assign.rs  if_cond.rs  mod.rs  ret.rs  var_assign.rs  var_def.rs  while_loop.rs
crates/prog-parser/src/error/: internal.rs  mod.rs  unexpected_token.rs
crates/prog-parser/src/errors/: expected_rules.rs  mod.rs
crates/prog-utils/: Cargo.toml
crates/prog-utils/src/: join_with.rs  join_with_or.rs  lib.rs  pretty_errors.rs  stream.rs
crates/prog-utils/src/fmt/: formatter.rs  mod.rs
crates/prog-utils/src/pretty_errors/: formatter_writer.rs  mod.rs  span.rs
crates/prog-vm/: Cargo.toml
crates/prog-vm/src/: bytecode.rs  compiler.rs  instruction.rs  lib.rs  value.rs  vm.rs
deprecated/: README.md
deprecated/prog-old-interpreter/src/: arg_parser.rs  context.rs  intrinsics.rs
deprecated/prog-old-interpreter/src/errors/: argument_count_mismatch.rs  argument_type_mismatch.rs  assertion_failed.rs  cannot_reassign_class_functions.rs  context_disallowed.rs  invalid_extern_argument.rs  invalid_file.rs  unsupported_binary.rs  unsupported_statement.rs  variable_doesnt_exist.rs
deprecated/prog-old-interpreter/src/values/: control_flow.rs  number.rs  object.rs  string.rs
deprecated/prog-old-parser/src/: utils.rs
deprecated/prog-old-parser/src/ast/: mod.rs
deprecated/website/: index.html
deprecated/website/js/: init-monaco.js  main.js
examples/: classes.prog  closure_scopes.prog  counter.prog  fibonacci.prog  hello_world.prog  lists.prog  mandelbrot_set.prog  objects.prog  recursion.prog  syntax_overview.prog
examples/modules/: main.prog  sqrt.prog
examples/recursion/: fibonacci.prog  sum.prog
prog-lang/: about.html  index.html
src/: cli.rs  error.rs  grammar.pest  lib.rs  main.rs
src/interpreter/: arg_parser.rs  context.rs  intrinsics.rs  mod.rs  values.rs
src/parser/: ast.rs  errors.rs  mod.rs
std/: fs.prog  mod.prog
syntax-extension/: .vscodeignore  LICENSE  package-lock.json  package.json  vsc-extension-quickstart.md
syntax-extension/syntaxes/: prog-lang.tmLanguage.json
tests/: run_all_examples.rs
tests/cases/: binary_ops.prog  classes.prog  function_identity.prog  indexing.prog  iterators.prog  object_identity.prog
website/: about.html  index.html  styles.css
website/js/: functional.js  monaco-prog-lang.js
