[package]
name = "prog-lang"
version = "0.1.0"
edition = "2021"

[features]
default = ["vm"]
vm = ["prog-vm", "dep:serde", "dep:bincode"]
repl = ["dep:rustyline"]
serde = [
	"dep:serde",
	"dep:serde_json",
	"prog-parser/serde",
	"prog-interpreter/serde",
	"prog-utils/serde"
]
api = [
	"serde",
	"dep:actix-web",
	"dep:actix-cors",
	"dep:env_logger"
]
website = ["api", "dep:actix-files"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.86"
ariadne = "0.4.1"
serde_json = "1.0.125"
pest = "2.7.11"
pest_derive = "2.7.11"
prog-parser = { path = "./crates/prog-parser" }
prog-interpreter = { path = "./crates/prog-interpreter" }
prog-vm = { path = "./crates/prog-vm" }
prog-utils = { path = "./crates/prog-utils" }
prog-macros = { path = "./crates/prog-macros" }
serde = { version = "1.0.208", features = ["derive"] }

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.16", features = ["derive"] }
pest = { workspace = true }
anyhow = { workspace = true }
prog-parser = { workspace = true }
prog-interpreter = { workspace = true }
prog-utils = { workspace = true }

prog-vm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rustyline = { version = "14.0.0", optional = true }
actix-web = { version = "4.9.0", optional = true }
actix-cors = { version = "0.7.0", optional = true }
actix-files = { version = "0.6.6", optional = true }
env_logger = { version = "0.11.5", optional = true }
bincode = { version = "1.3.3", optional = true }
