[package]
name = "prog-lang"
version = "0.1.0"
edition = "2021"

[features]
default = []
repl = ["dep:rustyline"]
serde = [
	"dep:serde",
	"dep:serde_json",
	"prog-lexer/serde",
	"prog-parser/serde",
	"prog-interpreter/serde",
	"prog-utils/serde"
]
api = [
	"serde",
	"dep:actix-web",
	"dep:actix-cors",
	"dep:env_logger"
]
website = ["api", "dep:actix-files"]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.95"
ariadne = "0.5.0"
serde_json = "1.0.134"
pest = "2.7.15"
pest_derive = "2.7.15"
prog-lexer = { path = "./crates/prog-lexer" }
prog-parser = { path = "./crates/prog-parser" }
prog-interpreter = { path = "./crates/prog-interpreter" }
prog-utils = { path = "./crates/prog-utils" }
prog-macros = { path = "./crates/prog-macros" }
serde = { version = "1.0.216", features = ["derive"] }

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.5.23", features = ["derive"] }
pest = { workspace = true }
anyhow = { workspace = true }
prog-lexer = { workspace = true }
prog-parser = { workspace = true }
prog-interpreter = { workspace = true }
prog-utils = { workspace = true }

serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
rustyline = { version = "15.0.0", optional = true }
actix-web = { version = "4.9.0", optional = true }
actix-cors = { version = "0.7.0", optional = true }
actix-files = { version = "0.6.6", optional = true }
env_logger = { version = "0.11.6", optional = true }
