[package]
name = "prog-lang"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]
full = ["serde"]
serde = [
	"dep:serde",
	"prog-lexer/serde",
	"prog-parser/serde",
	"prog-interpreter/serde",
	"prog-utils/serde"
]

[workspace]
members = ["crates/*"]

[workspace.dependencies]
ariadne = "0.5.0"
prog-lexer = { path = "./crates/prog-lexer" }
prog-parser = { path = "./crates/prog-parser" }
prog-interpreter = { path = "./crates/prog-interpreter" }
prog-utils = { path = "./crates/prog-utils" }
prog-macros = { path = "./crates/prog-macros" }
serde = { version = "1.0.217", features = ["derive"] }

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
prog-lexer = { workspace = true }
prog-parser = { workspace = true }
prog-interpreter = { workspace = true }
prog-utils = { workspace = true }

serde = { workspace = true, optional = true }
