[package]
name = "prog-interpreter"
version = "0.0.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde", "prog-parser/serde"]

[dependencies]
halloc = { path = "../halloc" }
text_io = "0.1.12"
anyhow = { workspace = true }
ariadne = { workspace = true }
prog-lexer = { workspace = true }
prog-parser = { workspace = true }
prog-utils = { workspace = true }
prog-macros = { workspace = true }

serde = { workspace = true, optional = true }