[package]
name = "prog-parser"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
ariadne = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
prog-utils = { workspace = true }
prog-macros = { workspace = true }