[package]
name = "prog-parser"
version = "0.0.0"
edition = "2021"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
ariadne = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
prog-utils = { workspace = true }
prog-macros = { workspace = true }

serde = { workspace = true, optional = true }